// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wrapper /> snapshot 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "margin": "0 auto",
        "maxWidth": "1000px",
        "padding": "50px 50px",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="unique"
    />
  </div>
</div>
`;

exports[`<Wrapper /> snapshot 2`] = `
<withTheme(StyledComponent)
  background={true}
  style={
    Object {
      "position": "relative",
    }
  }
  uid="xxx"
>
  <div
    style={
      Object {
        "margin": "0 auto",
        "maxWidth": "1000px",
        "padding": "50px 50px",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="unique"
    />
  </div>
</withTheme(StyledComponent)>
`;

exports[`<Wrapper /> snapshot 3`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "backgroundAttachment": "fixed",
        "backgroundColor": "green",
        "height": "100%",
        "left": "0",
        "opacity": "0.8",
        "position": "absolute",
        "top": "0",
        "width": "100%",
      }
    }
  />
  <div
    style={
      Object {
        "margin": "0 auto",
        "maxWidth": "1000px",
        "padding": "50px 50px",
        "position": "relative",
        "width": "100%",
      }
    }
  >
    <div
      className="unique"
    />
  </div>
</div>
`;
